--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoagGtF0LC6HmHqJyu85wIGZSj6rtb-PE&callback=initMap"></script>
 </head>
 <body>
-    <pre id="json-data"></pre>
+    <center><h3>821: PANTAI HILL PARK ~ HAB PASAR SENI</h3></center>
     <div class="map-row" id="maps-container"></div>
     <!-- <div id="maps-container"></div> -->
     <script>
